--- a/Janus/Janus/Base.lproj/Main.storyboard
+++ b/Janus/Janus/Base.lproj/Main.storyboard
@@ -17,41 +17,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42o-h2-jwu">
-                                <rect key="frame" x="63" y="249" width="45" height="30"/>
-                                <state key="normal" title="Door 1"/>
-                                <connections>
-                                    <action selector="doorButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xj5-2x-vuP"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hw2-sr-RoJ">
-                                <rect key="frame" x="41" y="20" width="336" height="203"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kv3-2g-8ww">
-                                <rect key="frame" x="174" y="249" width="47" height="30"/>
-                                <state key="normal" title="Door 2"/>
-                                <connections>
-                                    <action selector="doorButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7wu-CW-vne"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q7U-KN-xVJ">
-                                <rect key="frame" x="274" y="249" width="53" height="30"/>
-                                <state key="normal" title="Refresh"/>
-                                <connections>
-                                    <action selector="refreshImageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UhM-SC-3dm"/>
-                                </connections>
-                            </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="0ed-SI-U5H">
-                                <rect key="frame" x="335" y="254" width="20" height="20"/>
-                            </activityIndicatorView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hFg-EL-j0K">
+                                <rect key="frame" x="0.0" y="40" width="600" height="540"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="Hw2-sr-RoJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="510"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="NNx-Eb-BDe">
+                                        <rect key="frame" x="0.0" y="510" width="600" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42o-h2-jwu">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="30"/>
+                                                <state key="normal" title="Door 1"/>
+                                                <connections>
+                                                    <action selector="doorButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xj5-2x-vuP"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kv3-2g-8ww">
+                                                <rect key="frame" x="140" y="0.0" width="126" height="30"/>
+                                                <state key="normal" title="Door 2"/>
+                                                <connections>
+                                                    <action selector="doorButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7wu-CW-vne"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q7U-KN-xVJ">
+                                                <rect key="frame" x="285" y="0.0" width="141" height="30"/>
+                                                <state key="normal" title="Refresh"/>
+                                                <connections>
+                                                    <action selector="refreshImageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UhM-SC-3dm"/>
+                                                </connections>
+                                            </button>
+                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="0ed-SI-U5H">
+                                                <rect key="frame" x="446" y="0.0" width="154" height="30"/>
+                                            </activityIndicatorView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hFg-EL-j0K" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="76t-ne-dzK"/>
+                            <constraint firstItem="hFg-EL-j0K" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Mkn-eR-ldk"/>
+                            <constraint firstItem="hFg-EL-j0K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Udu-ia-nsk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hFg-EL-j0K" secondAttribute="bottom" constant="20" id="vmf-b9-EbR"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="doorOneButton" destination="42o-h2-jwu" id="gO8-1y-c4m"/>
                         <outlet property="doorTwoButton" destination="kv3-2g-8ww" id="pTt-Gr-SaR"/>
                         <outlet property="garageImage" destination="Hw2-sr-RoJ" id="f19-aj-e1Z"/>
-                        <outlet property="refreshSpinner" destination="0ed-SI-U5H" id="UIl-30-5uu"/>
+                        <outlet property="refreshSpinner" destination="0ed-SI-U5H" id="aPE-gh-3QE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
